fixed line break

--- a/clairemelbourneresume.html
+++ b/clairemelbourneresume.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Claire Melbourne</h1>
-  <h5>3639 14th Ave S., Minneapolis MN 55407<b>831-421-2392<b>claire.melbourne@gmail.com</h5>
+  <h5>3639 14th Ave S.<br> Minneapolis MN 55407<br>831-421-2392<br>claire.melbourne@gmail.com</h5>
   <h3>Profile</h3>
   <p>Creative thinker attuned to larger pictures and patterns. Invested in the stories behind and around the data. Willing to stay present through discomfort and new experiences.</p>
   
