--- a/clairemelbourneresume.html
+++ b/clairemelbourneresume.html
@@ -27,7 +27,12 @@
     <li>Curriculum designer and lead instructor for courses in jazz dance technique and dance improvisation for dance minors and majors</li>
     <li>Grader for online course in Dance and Popular Culture</li>
    </ul>
-  
-  
+     <h3>Motion Pacific, Santa Cruz, CA</h3>
+  <h4>Instructor, Curriculum Developer & Coordinator<br> June 2014 - July 2017 </h4>
+  <ul>
+    <li>Teacher for studio dance classes ages 6-adult</li>
+    <li>Coordinator for youth company</li>
+    <li>Summer camp director in coordination with Santa Cruz Museum of Art and History </li>
+   </ul>
 </body>
 </html>
